[project]
name = "flask-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Wesley Jochman",email = "jochmanw@msoe.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gunicorn (>=23.0.0,<24.0.0)",
    "flask (>=3.1.0,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

